[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialog_graph/GraphNodeTranslationLine.gd" type="Script" id=1]
[ext_resource path="res://addons/dialog_graph/GraphNodeLine.tscn" type="PackedScene" id=2]

[node name="GraphNodeTranslationLine" type="VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/separation = -5
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]
max_translation_length = 20

[node name="NodeLine1" parent="." instance=ExtResource( 2 )]
margin_right = 116.0
margin_bottom = 34.0

[node name="NodeLine2" parent="." instance=ExtResource( 2 )]
margin_top = 29.0
margin_right = 116.0
margin_bottom = 63.0

[connection signal="line_changed" from="NodeLine1" to="." method="_on_NodeLine1_line_changed"]
[connection signal="line_entered" from="NodeLine1" to="." method="_on_NodeLine1_line_entered"]
[connection signal="line_changed" from="NodeLine2" to="." method="_on_NodeLine2_line_changed"]
